--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Music player</string>
+    <string name="app_name">Task 4: Music player</string>
 </resources>
