--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Task 4: Music player</string>
+    <string name="playpause">Play / Pause</string>
 </resources>
